feat (api): get token and get footer

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -1,3 +1,4 @@
+@import './design_bcsoft';
 @import './scss/utils/breakpoints';
 @import './scss/utils/functions';
 @import './scss/utils/media-queries';
