feat (hero): hero webpart

--- a/bcsoft/styles/scss/_base.scss
+++ b/bcsoft/styles/scss/_base.scss
@@ -38,7 +38,16 @@ body {
   margin: 0;
   padding: 0;
 }
-
+ul{
+  margin: 0;
+  padding: 0;
+  & > li{
+    list-style: none;
+    & > a{
+      text-decoration: none;
+    }
+  }
+}
 a.disabled {
   pointer-events: none;
 }
@@ -106,13 +115,6 @@ svg{
   }
 }
 
-// div.section {
-//   min-width: 98vw;
-//   min-height: auto;
-//   display: flex;
-//   align-items: center;
-//   padding-top: 50px;
-// }
 
 img {
   width: 100%;
