feat(business): card business and links

--- a/bcsoft/styles/scss/_banner.scss
+++ b/bcsoft/styles/scss/_banner.scss
@@ -1,6 +1,7 @@
 .banner {
     min-height: 50px;
     text-align: center;
+    background: #DAB00699 0% 0% no-repeat padding-box;
     &-banner-text {
         font-size: 16px;
         font-weight: 400;
