--- a/bcsoft/styles/scss/_nav.scss
+++ b/bcsoft/styles/scss/_nav.scss
@@ -6,9 +6,9 @@
     outline: none !important;
     border: none;
     background-color: #fff;
-    font: var(--unnamed-font-style-normal) normal normal var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) var(--unnamed-font-family-exo-2);
-    letter-spacing: var(--unnamed-character-spacing-0);
-    color: var(--unnamed-color-185fa2);
+    font: normal normal normal 16px/24px Exo;
+    letter-spacing: $--unnamed-character-spacing-0;
+    color: $--unnamed-color-185fa2;
     text-align: center;
     letter-spacing: 0px;
     color: #185FA2;
@@ -18,8 +18,8 @@
 .navbar-custom-button.active { 
   color: #fff;
   outline: none;
-  background: var(--unnamed-color-185fa2) 0% 0% no-repeat padding-box;
-  border: 1px solid var(--unnamed-color-185fa2);
+  background: $--unnamed-color-185fa2 0% 0% no-repeat padding-box;
+  border: 1px solid $--unnamed-color-185fa2;
   box-shadow: 0px 2px 10px #001F3C33;
   border: 1px solid #185FA2;
 }
@@ -44,8 +44,8 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  background: var(--unnamed-color-185fa2) 0% 0% no-repeat padding-box;
-  color: var(--unnamed-color-ffffff);
+  background: $--unnamed-color-185fa2 0% 0% no-repeat padding-box;
+  color: $--unnamed-color-ffffff;
   transition: all 0.2s linear ;
   min-height: 0;
   &.open{
@@ -57,10 +57,9 @@
     &-links {
       display: inline-flex;
       align-items: center;
-      font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold) 18px /
-        var(--unnamed-line-spacing-33) var(--unnamed-font-family-exo-2);
-      letter-spacing: var(--unnamed-character-spacing-0);
-      color: var(--unnamed-color-ffffff);
+      font: normal normal bold 18px/33px Exo;
+      letter-spacing: $--unnamed-character-spacing-0;
+      color: $--unnamed-color-ffffff;
       @extend .pointer;
       & > span {
         @include margin-left-right(null, 0, 6);
