feat(assets): assets api

--- a/bcsoft/styles/scss/_base.scss
+++ b/bcsoft/styles/scss/_base.scss
@@ -81,14 +81,14 @@ a.disabled {
 }
 
 div.cardIcon-container {
-  background-color: #fff;
-  padding: 20px;
-  position: absolute;
-  top: -25px;
-  left: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    background-color: #fff;
+    padding: 20px;
+    position: absolute;
+    top: 13px;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 img.cardIcon {
