feat(assets): updated code

--- a/bcsoft/styles/scss/_footer.scss
+++ b/bcsoft/styles/scss/_footer.scss
@@ -28,7 +28,7 @@
         }
     }
     & .menu {
-        align-items: center;
+        // align-items: center;
         & .privacy {
             display: inline-flex;
             align-items: center;
