--- a/bcsoft/styles/scss/_nav.scss
+++ b/bcsoft/styles/scss/_nav.scss
@@ -1,7 +1,9 @@
 .navbar {
   display: flex;
+  align-items: flex-end;
   & > button {
-    min-width: 75px;
+    @include padding-top-bottom(null, 16, 16);
+    min-width: 100px;
     border-radius: 0 !important;
     outline: none !important;
     border: none;
