--- a/bcsoft/styles/scss/_business.scss
+++ b/bcsoft/styles/scss/_business.scss
@@ -23,6 +23,7 @@
     &-card {
         // @include padding-left-right(null, 16, 16);
         // @include margin-top-bottom(null, 24, 24);
+        max-width: 300px;
         & .core {
             position: relative;
             max-height: 100%;
