fix(style): font fix

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -12,7 +12,7 @@ $--unnamed-color-f0c70c: #F0C70C;
 $--unnamed-color-e05a00: #E05A00;
 
 /* Font/text values */
-$--unnamed-font-family-exo-2: Exo 2;
+$--unnamed-font-family-exo-2: "Exo-regular";
 $--unnamed-font-style-normal: normal;
 $--unnamed-font-weight-300: 300px;
 $--unnamed-font-weight-bold: bold;
