--- a/bcsoft/styles/scss/_business.scss
+++ b/bcsoft/styles/scss/_business.scss
@@ -45,6 +45,8 @@
                 position: absolute;
                 top: -5%;
                 left: 5%;
+                width: 64px;
+                height: 64px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
