feat(routing): redirect and business assets

--- a/bcsoft/styles/scss/_business.scss
+++ b/bcsoft/styles/scss/_business.scss
@@ -5,6 +5,7 @@
         flex-direction: column;
         justify-content: center;
         width: 100%;
+        @include margin-top-bottom(null, 0, 32);
         & > .title,
         & > .subtitle {
             text-align: center;
