--- a/bcsoft/styles/scss/_partners.scss
+++ b/bcsoft/styles/scss/_partners.scss
@@ -17,7 +17,7 @@
         &-title{
             flex: 1;
             display: flex;
-
+            // TODO: correggere tag h2
             h2 {
                 font-weight: $--unnamed-font-weight-bold;
                 font-family: $--unnamed-font-family-exo-2;
