feat(custom-button): created new reusable button

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -11,3 +11,5 @@
 @import './scss/business';
 @import './scss/locations';
 @import './scss/partners';
+@import './scss/clients';
+@import './scss/custom-button';
