feat(develop): ultimated courses webpart

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -14,7 +14,7 @@ $--unnamed-color-e05a00: #E05A00;
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
 $--unnamed-font-style-normal: normal;
-$--unnamed-font-weight-300: 300px;
+$--unnamed-font-weight-300: 300;
 $--unnamed-font-weight-bold: bold;
 $--unnamed-font-weight-medium: medium;
 $--unnamed-font-size-12: 12px;
