--- a/bcsoft/styles/scss/_custom-button.scss
+++ b/bcsoft/styles/scss/_custom-button.scss
@@ -2,9 +2,10 @@
     position: relative;
 
     .custom-main-button {
+        position: relative;
         height: 40px;
         width: 198px;
-        z-index: 1;
+        z-index: 100;
         border: 1px solid #001f3c;
         font-weight: normal;
         font-family: $--unnamed-font-family-exo-2;
@@ -18,9 +19,10 @@
         width: 100%;
         transform: translate(7px, -7px);
         position: absolute;
-        z-index: -1;
+        z-index: 99;
         display: none !important;
         cursor: default !important;
+        background-color: transparent;
     }
 
     .custom-outer-shadow {
@@ -30,9 +32,10 @@
         left: 0;
         transform: translate(-7px, 7px);
         position: absolute;
-        z-index: -1;
+        z-index: 99;
         display: none !important;
         cursor: default !important;
+        background-color: transparent;
     }
 
 }
