--- a/bcsoft/styles/scss/_hero.scss
+++ b/bcsoft/styles/scss/_hero.scss
@@ -72,7 +72,7 @@ div.heroSection {
     &-content {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         &_title {
             font: normal normal bold 64px/96px "Exo-regular";
             letter-spacing: $--unnamed-character-spacing-0;
@@ -103,7 +103,7 @@ div.heroSection {
 
 .check-more-container {
     position: relative;
-    width: 100%;
+    width: auto;
     padding-left: 1rem;
     height: 150px;
     display: flex;
