--- a/bcsoft/styles/scss/_swiper.scss
+++ b/bcsoft/styles/scss/_swiper.scss
@@ -59,6 +59,8 @@
   
       .swiper-slider-img-container {
         height: 150px;
+        position: relative;
+        top: 15%;
       }
   
     }
