feat(develop): ultimated news webpart

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -10,6 +10,7 @@ $--unnamed-color-001f3c: #001F3C;
 $--unnamed-color-002950: #002950;
 $--unnamed-color-f0c70c: #F0C70C;
 $--unnamed-color-e05a00: #E05A00;
+$--unnamed-color-000000: #000000;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
