--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -17,4 +17,5 @@
 @import './scss/clients';
 @import './scss/custom-button';
 @import './scss/courses';
+@import './scss/news';
 @import './scss/swiper';
