feat(develop) applied serverSideProps to weboarts

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -16,6 +16,7 @@ $--unnamed-color-000000: #000000;
 $--unnamed-font-family-exo-2: "Exo-regular";
 $--unnamed-font-style-normal: normal;
 $--unnamed-font-weight-300: 300;
+$--unnamed-font-weight-400: 400;
 $--unnamed-font-weight-bold: bold;
 $--unnamed-font-weight-medium: medium;
 $--unnamed-font-size-12: 12px;
