feat(develop): created new page 'About' and webpart 'numbers'

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -11,6 +11,10 @@ $--unnamed-color-002950: #002950;
 $--unnamed-color-f0c70c: #F0C70C;
 $--unnamed-color-e05a00: #E05A00;
 $--unnamed-color-000000: #000000;
+$--unnamed-color-accfe5: #ACCFE5;
+$--unnamed-color-155897: #155897;
+$--unnamed-color-aacef8: #AACEF8;
+$--unnamed-color-2974b3: #2974B3;
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
