--- a/bcsoft/styles/scss/_locations.scss
+++ b/bcsoft/styles/scss/_locations.scss
@@ -5,6 +5,7 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
+    min-height: 700px;
     path:hover{
         fill-opacity: .8;
         cursor: pointer;
