feat(develop): ultimated company's about page

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -20,3 +20,10 @@
 @import './scss/news';
 @import './scss/swiper';
 @import './scss/numbers';
+@import './scss/vision';
+@import './scss/history';
+@import './scss/custom-hero';
+@import './scss/info-banner';
+@import './scss/quote';
+@import './scss/build-your-future';
+@import './scss/strengths';
