--- a/bcsoft/styles/scss/_base.scss
+++ b/bcsoft/styles/scss/_base.scss
@@ -135,3 +135,11 @@ video {
 .pointer {
   cursor: pointer;
 }
+
+.position-absolute {
+  position: absolute;
+}
+
+.position-relative {
+  position: relative;
+}
