--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -15,20 +15,29 @@ $--unnamed-color-accfe5: #ACCFE5;
 $--unnamed-color-155897: #155897;
 $--unnamed-color-aacef8: #AACEF8;
 $--unnamed-color-2974b3: #2974B3;
+$--unnamed-color-ff8400: #FF8400;
+
 
 /* Font/text values */
 $--unnamed-font-family-exo-2: "Exo-regular";
 $--unnamed-font-style-normal: normal;
+$--unnamed-font-style-italic: italic;
 $--unnamed-font-weight-300: 300;
 $--unnamed-font-weight-400: 400;
+$--unnamed-font-weight-500: 500;
 $--unnamed-font-weight-bold: bold;
 $--unnamed-font-weight-medium: medium;
 $--unnamed-font-size-12: 12px;
 $--unnamed-font-size-14: 14px;
 $--unnamed-font-size-16: 16px;
+$--unnamed-font-size-18: 18px;
 $--unnamed-font-size-22: 22px;
+$--unnamed-font-size-28: 28px;
 $--unnamed-font-size-30: 30px;
+$--unnamed-font-size-36: 36px;
 $--unnamed-font-size-40: 40px;
+$--unnamed-font-size-46: 46px;
+$--unnamed-font-size-50: 50px;
 $--unnamed-font-size-64: 64px;
 $--unnamed-character-spacing-0: 0px;
 $--unnamed-character-spacing-0-05: 0.05px;
