--- a/bcsoft/styles/scss/_custom-button.scss
+++ b/bcsoft/styles/scss/_custom-button.scss
@@ -4,7 +4,7 @@
     .custom-main-button {
         position: relative;
         height: 40px;
-        width: 198px;
+        min-width: 198px;
         z-index: 100;
         border: 1px solid #001f3c;
         font-weight: normal;
