--- a/bcsoft/styles/scss/_business.scss
+++ b/bcsoft/styles/scss/_business.scss
@@ -1,5 +1,10 @@
 .business {
     padding: 3rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
     &-header {
         display: flex;
         flex-direction: column;
@@ -21,66 +26,101 @@
             color: $--unnamed-color-185fa2;
         }
     }
-    &-card {
-        // @include padding-left-right(null, 16, 16);
-        // @include margin-top-bottom(null, 24, 24);
-        max-width: 300px;
-        margin: 1rem;
-        & .core {
+
+
+    &-container {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        gap: 5rem;
+        padding: 1rem;
+        max-width: 1050px;
+
+
+        .business-card {
+            // @include padding-left-right(null, 16, 16);
+            // @include margin-top-bottom(null, 24, 24);
+            // max-width: 300px;
+            // margin: 1rem;
             position: relative;
-            max-height: 100%;
-            @include padding-top-bottom(null, 24, 24);
-            & > svg {
-                width: 100%;
-                height: 100%;
-            }
-        }
-        &_content {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            // @include padding-top-bottom(null, 0, 24);
+            min-height: 280px;
+            width: 292px;
+            transform: skewY(354deg);
+            border: 2px solid #001f3c;
+            
             & > .card-icon {
                 background-color: #fff;
                 padding: 15px;
                 position: absolute;
-                top: -5%;
+                top: -20%;
                 left: 5%;
                 width: 64px;
                 height: 64px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                transform: skewY(-354deg);
+            }
+            // & .core {
+            //     position: relative;
+            //     max-height: 100%;
+            //     @include padding-top-bottom(null, 24, 24);
+            //     & > svg {
+            //         width: 100%;
+            //         height: 100%;
+            //     }
+            // }
+            // &_content {
+            //     display: flex;
+            //     flex-direction: column;
+            //     justify-content: space-between;
+            //     // @include padding-top-bottom(null, 0, 24);
+            //     & > .card-icon {
+            //         background-color: #fff;
+            //         padding: 15px;
+            //         position: absolute;
+            //         top: -5%;
+            //         left: 5%;
+            //         width: 64px;
+            //         height: 64px;
+            //         display: flex;
+            //         justify-content: center;
+            //         align-items: center;
+            //     }
+            // }
+            &_header {
+                @include padding-left-right(null, 20, 20);
+                @include margin-top-bottom(null, 32, 20);
+            }
+            &_title {
+                text-transform: uppercase;
+                // text-align: center;
+            }
+            &_subtitle {
+                // @include padding-left-right(null, 16, 16);
+                // @include margin-top-bottom(null, 0, 24);
+                font: normal normal normal 14px/21px "Exo-regular";
+                letter-spacing: $--unnamed-character-spacing-0-03;
+                color: $--unnamed-color-001f3c;
+            }
+            &_footer {
+                display: flex;
+                align-items: flex-end;
+                @include padding-left-right(null, 20, 20);
+                @include margin-top-bottom(null, 0, 24);
+                transform: skewY(-354deg);
+                & > button {
+                    height: 38px;
+                    background: $--unnamed-color-ffffff 0% 0% no-repeat padding-box;
+                    border: 1px solid $--unnamed-color-001f3c;
+                    background: #ffffff 0% 0% no-repeat padding-box;
+                }
             }
         }
-        &_header {
-            @include padding-left-right(null, 20, 20);
-            @include margin-top-bottom(null, 32, 20);
-        }
-        &_title {
-            text-transform: uppercase;
-            // text-align: center;
-        }
-        &_subtitle {
-            // @include padding-left-right(null, 16, 16);
-            // @include margin-top-bottom(null, 0, 24);
-            font: normal normal normal 14px/21px "Exo-regular";
-            letter-spacing: $--unnamed-character-spacing-0-03;
-            color: $--unnamed-color-001f3c;
-        }
-        &_footer {
-            display: flex;
-            align-items: flex-end;
-            @include padding-left-right(null, 20, 20);
-            @include margin-top-bottom(null, 0, 24);
-            & > button {
-                height: 38px;
-                background: $--unnamed-color-ffffff 0% 0% no-repeat padding-box;
-                border: 1px solid $--unnamed-color-001f3c;
-                background: #ffffff 0% 0% no-repeat padding-box;
-            }
-        }
+
+
     }
+
 }
 
 .inner-shadow-button,
