--- a/bcsoft/styles/scss/_custom-hero.scss
+++ b/bcsoft/styles/scss/_custom-hero.scss
@@ -22,6 +22,7 @@
             font-size: $--unnamed-font-size-64;
             font-weight: $--unnamed-font-weight-bold;
             max-width: 479px;
+            @include margin-top-bottom(null, 0, 15);
         }
 
         div {
