feat(develop) started contacts page withl most of its webparts

--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -38,6 +38,8 @@ $--unnamed-font-size-36: 36px;
 $--unnamed-font-size-40: 40px;
 $--unnamed-font-size-46: 46px;
 $--unnamed-font-size-50: 50px;
+$--unnamed-font-size-56: 56px;
+$--unnamed-font-size-60: 60px;
 $--unnamed-font-size-64: 64px;
 $--unnamed-character-spacing-0: 0px;
 $--unnamed-character-spacing-0-05: 0.05px;
