--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -28,3 +28,4 @@
 @import './scss/build-your-future';
 @import './scss/strengths';
 @import './scss/certifications-items';
+@import './scss/services';
