--- a/bcsoft/styles/scss/_custom-hero.scss
+++ b/bcsoft/styles/scss/_custom-hero.scss
@@ -30,6 +30,13 @@
             font-family: $--unnamed-font-family-exo-2 !important;
             font-size: $--unnamed-font-size-16 !important;
             font-weight: $--unnamed-font-weight-300 !important;
+
+            span {
+                color: $--unnamed-color-185fa2 !important;
+                font-family: $--unnamed-font-family-exo-2 !important;
+                font-size: $--unnamed-font-size-16 !important;
+                font-weight: $--unnamed-font-weight-300 !important;
+            }
         }
     }
 
