feat(develop) created Factory page

--- a/bcsoft/styles/globals.scss
+++ b/bcsoft/styles/globals.scss
@@ -29,3 +29,8 @@
 @import './scss/strengths';
 @import './scss/certifications-items';
 @import './scss/services';
+@import './scss/consultants';
+@import './scss/job-offers';
+@import './scss/services-item';
+@import './scss/clients-feedbacks';
+@import './scss/re-engineering';
