--- a/bcsoft/styles/_design_bcsoft.scss
+++ b/bcsoft/styles/_design_bcsoft.scss
@@ -16,6 +16,7 @@ $--unnamed-color-155897: #155897;
 $--unnamed-color-aacef8: #AACEF8;
 $--unnamed-color-2974b3: #2974B3;
 $--unnamed-color-ff8400: #FF8400;
+$--unnamed-color-39597787: #39597787;
 
 
 /* Font/text values */
@@ -41,6 +42,7 @@ $--unnamed-font-size-50: 50px;
 $--unnamed-font-size-56: 56px;
 $--unnamed-font-size-60: 60px;
 $--unnamed-font-size-64: 64px;
+$--unnamed-font-size-78: 78px;
 $--unnamed-character-spacing-0: 0px;
 $--unnamed-character-spacing-0-05: 0.05px;
 $--unnamed-character-spacing-0-03: 0.03px;
